--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div id="loading-spinner">Loading calendar...</div>
       <iframe
         id="calendar-iframe"
-        src="https://calendar.google.com/calendar/embed?src=df80381b3317c2ce323ec7376a93dd57fbaa8e733452e576b56ace1656198c31%40group.calendar.google.com&mode=MONTH&showNav=1&showDate=1&showPrint=0&showTabs=1&showCalendars=0&showTz=1&wkst=2"
+        src="https://calendar.google.com/calendar/u/0?cid=M2EzOTRhNGY5NTZhNjdhYTY2NTAzM2VhOGRlZGI1OTY2N2U0MjgyMjFkOGIxMzA2YjRjNGRiYTA2Y2M1MWU1M0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t"
         style="border: 0; width: 100%; height: 100vh;"
         frameborder="0"
         scrolling="no"
@@ -63,7 +63,7 @@
       ></iframe>
     </div>
     <a
-      href="https://calendar.google.com/calendar/r?cid=df80381b3317c2ce323ec7376a93dd57fbaa8e733452e576b56ace1656198c31%40group.calendar.google.com"
+      href="https://calendar.google.com/calendar/u/0?cid=M2EzOTRhNGY5NTZhNjdhYTY2NTAzM2VhOGRlZGI1OTY2N2U0MjgyMjFkOGIxMzA2YjRjNGRiYTA2Y2M1MWU1M0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t"
       target="_blank"
       rel="noopener noreferrer"
       class="button"
