--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div id="loading-spinner">Loading calendar...</div>
       <iframe
         id="calendar-iframe"
-        src="https://calendar.google.com/calendar/u/0?cid=M2EzOTRhNGY5NTZhNjdhYTY2NTAzM2VhOGRlZGI1OTY2N2U0MjgyMjFkOGIxMzA2YjRjNGRiYTA2Y2M1MWU1M0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t"
+        src="https://calendar.google.com/calendar/embed?src=3a394a4f956a67aa665033ea8dedb59667e428221d8b1306b4c4dba06cc51e53%40group.calendar.google.com&ctz=Europe%2FKiev"
         style="border: 0; width: 100%; height: 100vh;"
         frameborder="0"
         scrolling="no"
@@ -63,7 +63,7 @@
       ></iframe>
     </div>
     <a
-      href="https://calendar.google.com/calendar/u/0?cid=M2EzOTRhNGY5NTZhNjdhYTY2NTAzM2VhOGRlZGI1OTY2N2U0MjgyMjFkOGIxMzA2YjRjNGRiYTA2Y2M1MWU1M0Bncm91cC5jYWxlbmRhci5nb29nbGUuY29t"
+      href="https://calendar.google.com/calendar/embed?src=3a394a4f956a67aa665033ea8dedb59667e428221d8b1306b4c4dba06cc51e53%40group.calendar.google.com&ctz=Europe%2FKiev"
       target="_blank"
       rel="noopener noreferrer"
       class="button"
